syntax = "proto3";

package protos;


message SavedLooper {
    uint32 id = 1;
    repeated string samples = 2;
}

message SavedSession {
    int64 save_time = 1;
    uint64 time_signature_upper = 2;
    uint64 time_signature_lower = 3;
    uint64 tempo_mbpm = 4;
    repeated SavedLooper loopers = 5;
}
